--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <h1>tiêu đề</h1>
+    <h2>sủa 1</h2>
 </head>
 <body>
     
