1 sủa code lần 1

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <h1>tiêu đề</h1>
-    <h2>sủa 1</h2>
-</head>
-<body>
-    
-</body>
+    <h2>sủa thêm rất nhiều code ở đây</h2>
+  </head>
+  <body></body>
 </html>
